src/test/ui/infinite/infinite-instantiation.stderr
error: reached the recursion limit while instantiating `function::<Option<Option<Option<...>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>`
  --> $DIR/infinite-instantiation.rs:21:9
   |
LL |         function(counter - 1, t.to_option());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `function` defined here
  --> $DIR/infinite-instantiation.rs:19:1
   |
LL | fn function<T:ToOpt + Clone>(counter: usize, t: T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

